deploy/resources/generation/resources/generation/resources/generation/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-search/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-search
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-search
    sas.com/admin: namespace
  name: sas-search
spec:
  host: $(INGRESS_HOST)
  path: /search
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-search
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-searchIndex
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-search-index
    sas.com/admin: namespace
  name: sas-search-index
spec:
  host: $(INGRESS_HOST)
  path: /searchIndex
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-search-index
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-searchIndex
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-search-index
    sas.com/admin: namespace
  name: sas-search-index-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /searchIndex
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-search-index
  wildcardPolicy: Subdomain

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-search
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-search
    sas.com/admin: namespace
  name: sas-search-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /search
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-search
  wildcardPolicy: Subdomain
